--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "gudwin/faid",
   "description": "FAID - first aid PHP Framework",
+  "version" : "0.5.1",
   "require": {
     "phpunit/phpunit": "4.8.21"
   },
