--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "author": "Gisma",
   "name": "FAID",
-  "version": "0.5.2",
+  "version": "0.6.0",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": ">= 0.1.6",
     "grunt-contrib-watch": "~0.3.1",
     "grunt-contrib-concat": "^0.4.0",
-    "grunt-phpunit" : ">= 4.0"
+    "grunt-phpunit" : "^0.4.0"
   }
 }
