--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
   "name": "gudwin/faid",
-  "description": "FAID - first aid PHP Framework",
-  "version" : "0.6.15",
-  "require": {
-    "phpunit/phpunit": "^4.8.21"
+  "description": "FAID - First Aid PHP Framework",
+  "version" : "0.7.0",
+  "require-dev": {
+    "phpunit/phpunit": "^8"
   },
   "authors": [
     {
@@ -17,5 +17,8 @@
   },
   "autoload": {
     "classmap" : ["src/"]
+  },
+  "autoload-dev": {
+    "classmap" : ["tests/"]
   }
 }
