--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "author": "Gisma",
-  "name": "FAID",
-  "version": "0.6.15",
+  "author": "Dmitry Shevchenko <d@dd-team.org>",
+  "name": "gudwin/faid",
+  "version": "0.7.0",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": ">= 0.1.6",
